Created city page

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safe Naija - Home</title>
+    <title>safeNaija</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
@@ -45,6 +45,10 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="reports.html" style="color:rgb(255,255,255);">Report</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="news.html" style="color:rgb(255,255,255);">News</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="cities.html" style="color:rgb(255,255,255);">Cities</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="color:rgb(255,255,255);"><i class="fa fa-user" style="font-size:20px;"></i>&nbsp; Hello User&nbsp;</a>
+                        <div class="dropdown-menu"
+                            role="menu"><a class="dropdown-item" role="presentation" href="#"><i class="fa fa-gear" style="font-size:20px;"></i>&nbsp;Account Setting</a><a class="dropdown-item" role="presentation" href="#"><i class="fa fa-sign-out" style="font-size:20px;"></i>&nbsp;Log Out<br></a></div>
+                    </li>
                 </ul>
         </div>
         </div>
@@ -57,7 +61,7 @@
             </div>
         </div>
     </div>
-    <div style="background-color:#090d14;padding:40px;">
+    <div style="background-color:#090d14;padding:40px;" class=".d-sm-none .d-md-block .d-none .d-sm-block">
         <div class="container">
             <div class="row">
                 <div class="col-md-4"><i class="fa fa-angle-double-down d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:134px;"></i>
@@ -128,6 +132,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/card-caro.js"></script>
 </body>
 
 </html>
