--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safe Naija - Log In</title>
+    <title>safeNaija</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
@@ -42,12 +42,12 @@
     </div>
     </nav>
     </div>
-    <div class="login-dark" style="background-color:#090d14;height:538px;">
+    <div class="login-dark" style="background-color:#090d14;height:600px;">
         <form method="post">
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
-            <div class="form-group"><input class="form-control" type="text" name="username" required placeholder="Username" autofocus=""></div>
-            <div class="form-group"><input class="form-control" type="password" name="password" required placeholder="Password"></div>
+            <div class="form-group"><input class="form-control" type="email" name="username" required="" placeholder="Username" autofocus=""></div>
+            <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
             <div class="form-group"><button class="btn btn-primary btn-block" type="submit" style="background-color:#007bff;">Log In</button></div>
         </form>
     </div>
@@ -82,6 +82,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/card-caro.js"></script>
 </body>
 
 </html>
