--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safe Naija - Sign Up</title>
+    <title>safeNaija</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
@@ -42,13 +42,13 @@
     </div>
     </nav>
     </div>
-    <div class="login-dark" style="background-color:#090d14;height:538px;">
+    <div class="login-dark" style="background-color:#090d14;height:600px;">
         <form method="post">
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="fa fa-user"></i></div>
-            <div class="form-group"><input class="form-control" type="text" placeholder="Username" required autofocus=""></div>
-            <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" required></div>
-            <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password" required></div>
+            <div class="form-group"><input class="form-control" type="text" placeholder="Username"></div>
+            <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email"></div>
+            <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
             <div class="form-group"><button class="btn btn-primary btn-block" type="submit" style="background-color:#007bff;">Sign Up</button></div>
         </form>
     </div>
@@ -83,6 +83,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/card-caro.js"></script>
 </body>
 
 </html>
