--- a/cities.html
+++ b/cities.html
@@ -27,8 +27,246 @@
 </head>
 
 <body>
+    <div>
+        <nav class="navbar navbar-light navbar-expand-md navigation-clean" style="background-color:rgb(9,13,20);">
+            <div class="container"><a class="navbar-brand" href="home.html" style="color:rgb(255,255,255);">Safe Nigeria</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div
+                    class="collapse navbar-collapse" id="navcol-1">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="home.html" style="color:rgb(255,255,255);">Home</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="reports.html" style="color:rgb(255,255,255);">Report</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="news.html" style="color:rgb(255,255,255);">News</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link active" href="cities.html" style="color:rgb(255,255,255);">Cities</a></li>
+                        <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="color:rgb(255,255,255);"><i class="fa fa-user" style="font-size:20px;"></i>&nbsp; Hello User&nbsp;</a>
+                            <div class="dropdown-menu"
+                                role="menu"><a class="dropdown-item" role="presentation" href="#"><i class="fa fa-gear" style="font-size:20px;"></i>&nbsp;Account Setting</a><a class="dropdown-item" role="presentation" href="#"><i class="fa fa-sign-out" style="font-size:20px;"></i>&nbsp;Log Out<br></a></div>
+                        </li>
+                    </ul>
+            </div>
+    </div>
+    </nav>
+    </div>
+    <div style="background-color:#090d14;padding-top:75px;padding-bottom:50px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 style="color:rgb(255,255,255);">Know what is happening in the CITIES around you</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="background-color:#090d14;padding-bottom:96px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h4 style="color:rgb(255,255,255);">Lagos</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12"><div class="container-fluid">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner row w-100 mx-auto">
+      <div class="carousel-item col-md-4 active">
+        <div class="card">
+            <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+    </div>
+<!--     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a> -->
+  </div>
+</div></div>
+            </div>
+        </div>
+    </div>
+    <div style="background-color:#090d14;padding-bottom:96px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h4 style="color:rgb(255,255,255);">Oyo</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12"><div class="container-fluid">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner row w-100 mx-auto">
+      <div class="carousel-item col-md-4 active">
+        <div class="card">
+            <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+    </div>
+<!--     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a> -->
+  </div>
+</div></div>
+            </div>
+        </div>
+    </div>
+    <div style="background-color:#090d14;padding-bottom:96px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h4 style="color:rgb(255,255,255);">Ogun</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12"><div class="container-fluid">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner row w-100 mx-auto">
+      <div class="carousel-item col-md-4 active">
+        <div class="card">
+            <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+      <div class="carousel-item col-md-4">
+        <div class="card">
+          <iframe class="card-img-top img-fluid" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe>
+        </div>
+      </div>
+    </div>
+<!--     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a> -->
+  </div>
+</div></div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-dark" style="background-color:rgb(9,13,20);">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Pages</h3>
+                        <ul>
+                            <li><a href="reports.html">Report a Crime</a></li>
+                            <li><a href="news.html">News</a></li>
+                            <li><a href="#">Cities</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>User</h3>
+                        <ul>
+                            <li><a href="login.html">Log In</a></li>
+                            <li><a href="signup.html">Sign Up</a></li>
+                            <li><a href="settings.html">Account Settings</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>Safe Nigeria</h3>
+                        <p>Safe Nigeria allows people to record emergencies that happen around them and post them online, for people to stay safe off there or take measures.<br></p>
+                    </div>
+                </div>
+                <p class="copyright">Safe Nigeria © 2019</p>
+            </div>
+        </footer>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/card-caro.js"></script>
 </body>
 
 </html>
