created settings page and updated ui

--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html style="height:0px;">
+<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safe Nigeria - Home</title>
+    <title>404 - Not Found</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
@@ -26,14 +26,7 @@
     <link rel="stylesheet" href="assets/css/Testimonials.css">
 </head>
 
-<body style="background-color:rgb(255,255,255);">
-    <div>
-        <div class="header-blue" style="background-repeat:no-repeat;background-size:cover;background-position:100%;">
-            <h1 class="text-center" style="font-family:Lato, sans-serif;font-weight:bold;font-size:30px;padding-top:189px;">create awareness about the latest happenings around you</h1>
-            <h3 class="text-center" style="color: #fff;">together we go make naija safe</h3>
-            <center><a href="signup.html" class="text-center btn btn-primary">create your free account</a></center>
-        </div>
-    </div>
+<body style="background-color:rgb(9,13,20);">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-search" style="background-color:#090d14;">
         <div class="container"><a class="navbar-brand" href="home.html" style="color:rgb(255,255,255);">Safe Nigeria</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
@@ -51,51 +44,13 @@
         </div>
         </div>
     </nav>
-    <div class="highlight-blue" style="background-color:rgb(9,13,20);">
-        <div class="container">
-            <div class="intro">
-                <h1 class="text-center" style="font-family:Lato, sans-serif;font-weight:bold;font-size:30px;">KEEPING PEOPLE SAFE AND INFORMED</h1>
-                <p><br>It would curb the gap in reporting emergencies and fake news online, since people now can tell their news, and comments on each posts would affirm the veracity of the news<br><br></p>
-            </div>
-        </div>
-    </div>
-    <div style="background-color:#090d14;padding:40px;">
+    <div style="background-color:#090d14;padding-top:46px;padding-bottom:36px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 d-none d-sm-block xs-block"><i class="fa fa-angle-double-down d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:134px;"></i>
-                    <p>&nbsp;</p><i class="fa fa-info d-block" style="font-size:76px;color:rgb(62,140,228);padding-left:144px;padding-top:17px;"></i>
-                    <p>&nbsp;</p><i class="fa fa-volume-control-phone d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:135px;padding-top:74px;"></i></div>
-                <div class="col-md-4" style="color:rgb(255,255,255);padding:0px;">
-                    <div class="intro">
-                        <h2 class="text-center d-block" style="padding:18px;">Democratizing NPF</h2>
-                        <h2 class="text-center d-block visible" style="padding:0px;"><br>Keeping citizens safe and informed<br><br></h2>
-                        <h2 class="text-center d-block"><br>Curbing the gap in reporting emergencies online<br><br></h2>
-                    </div>
+                <div class="col-md-12">
+                    <h1 style="font-size:189px;font-weight:bold;padding-left:86px;">404</h1>
+                    <h1 class="text-capitalize" style="padding-left:85px;">oops!...Page not found</h1>
                 </div>
-                <div class="col-md-4 d-none d-sm-block xs-block"><i class="fa fa-angle-double-down d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:146px;"></i>
-                    <p>&nbsp;</p><i class="fa fa-info d-block" style="font-size:76px;color:rgb(62,140,228);padding-left:158px;padding-top:17px;"></i>
-                    <p>&nbsp;</p><i class="fa fa-volume-control-phone d-block" style="color:rgb(62,140,228);font-size:76px;padding:0px;padding-left:151px;padding-top:74px;"></i></div>
-            </div>
-        </div>
-    </div>
-    <div class="highlight-clean" style="background-color:rgb(9,13,20);">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center" style="color:rgb(255,255,255);">Become a Good Citizen</h2>
-                <p class="text-center" style="color:rgb(172,200,232);">Sign Up and share a post about an incident to create awareness. Be a Good Citizen</p>
-            </div>
-            <div class="buttons"><a class="btn btn-primary" role="button" href="signup.html">sign up</a><a class="btn btn-light" role="button" href="login.html">log in</a></div>
-        </div>
-    </div>
-    <div class="testimonials-clean" style="background-color:rgb(49,52,55);">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center" style="color:rgb(255,255,255);">Recent Incidents</h2>
-            </div>
-            <div class="row people">
-                <div class="col-md-6 col-lg-4 item"><iframe width="360" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/Wy8kokUarow" style="height:221px;width:361px;"></iframe></div>
-                <div class="col-md-6 col-lg-4 item"><iframe width="360" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="height:221px;width:361px;"></iframe></div>
-                <div class="col-md-6 col-lg-4 item"><iframe width="360" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/zTwmEy48wlo" style="height:221px;width:361px;"></iframe></div>
             </div>
         </div>
     </div>
