created news page

--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safe Nigeria - News</title>
+    <title>safeNaija</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
@@ -44,6 +44,24 @@
         </div>
         </div>
     </nav>
+    <div style="background-color:#090d14;padding-top:71px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4"><iframe width="285" height="270" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/Wy8kokUarow" style="height:270px;width:285px;"></iframe></div>
+                <div class="col-md-4"><iframe width="560" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/zTwmEy48wlo" style="width:285px;height:270px;"></iframe></div>
+                <div class="col-md-4"><iframe width="560" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="width:285px;height:270px;"></iframe></div>
+            </div>
+        </div>
+    </div>
+    <div style="background-color:#090d14;padding-top:71px;padding-bottom:62px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4"><iframe width="285" height="270" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/Wy8kokUarow" style="height:270px;width:285px;"></iframe></div>
+                <div class="col-md-4"><iframe width="560" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/zTwmEy48wlo" style="width:285px;height:270px;"></iframe></div>
+                <div class="col-md-4"><iframe width="560" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/EjXGkDH6_Jo" style="width:285px;height:270px;"></iframe></div>
+            </div>
+        </div>
+    </div>
     <div class="footer-dark" style="background-color:rgb(9,13,20);">
         <footer>
             <div class="container">
